WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315439
[cleanup] Separate flex base/hypothetical main size determination from FlexLayoutItem construction
https://bugs.webkit.org/show_bug.cgi?id=315439
Summary
[cleanup] Separate flex base/hypothetical main size determination from FlexLa...
alan
Reported
2026-05-23 20:33:27 PDT
ssia
Attachments
Patch
(9.51 KB, patch)
2026-05-23 20:34 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.51 KB, patch)
2026-05-25 07:53 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-23 20:34:42 PDT
Created
attachment 479788
[details]
Patch
alan
Comment 2
2026-05-25 07:53:20 PDT
Created
attachment 479802
[details]
[fast-cq]Patch
EWS
Comment 3
2026-05-25 09:59:17 PDT
Committed
313847@main
(180eaa125ce9): <
https://commits.webkit.org/313847@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479802
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-05-25 10:00:13 PDT
<
rdar://problem/177885114
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug